Fix base url and header
