# Node_src/swagger.json
@@ -26,7 +26,7 @@
     "application/json"
   ],
   "paths": {
-    "/baseR4/Observation": {
+    "/Observation": {
       "post": {
         "tags": [
           "Observation"
@@ -41,6 +41,11 @@
             "schema": {
               "$ref": "#/definitions/Observation"
             }
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "SMART Auth Token"
           }
         ],
         "produces": [
@@ -56,7 +61,7 @@
         }
       }
     },
-    "/baseR4/Observation/{id}": {
+    "/Observation/{id}": {
       "parameters": [
         {
           "name": "id",
@@ -64,6 +69,11 @@
           "required": true,
           "description": "ID ECG Resource",
           "type": "string"
+        },
+        {
+          "name": "Authorization",
+          "in": "header",
+          "description": "SMART Auth Token"
         }
       ],
       "get": {
@@ -103,6 +113,11 @@
             "schema": {
               "$ref": "#/definitions/PatchRequest"
             }
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "SMART Auth Token"
           }
         ],
         "responses": {
@@ -138,6 +153,11 @@
             "schema": {
               "$ref": "#/definitions/Observation"
             }
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "SMART Auth Token"
           }
         ],
         "produces": [
@@ -170,7 +190,7 @@
         }
       }
     },
-    "/baseR4/Patient": {
+    "/Patient": {
       "post": {
         "tags": [
           "Patient"
@@ -185,6 +205,11 @@
             "schema": {
               "$ref": "#/definitions/Patient"
             }
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "SMART Auth Token"
           }
         ],
         "produces": [
@@ -200,7 +225,7 @@
         }
       }
     },
-    "/baseR4/Patient/{id}": {
+    "/Patient/{id}": {
       "parameters": [
         {
           "name": "id",
@@ -208,6 +233,11 @@
           "required": true,
           "description": "ID Patient Resource",
           "type": "string"
+        },
+        {
+          "name": "Authorization",
+          "in": "header",
+          "description": "SMART Auth Token"
         }
       ],
       "get": {
@@ -248,6 +278,11 @@
             "schema": {
               "$ref": "#/definitions/Patient"
             }
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "SMART Auth Token"
           }
         ],
         "produces": [
